--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -1,7 +1,4 @@
-# This workflow will build a Swift project
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-swift
-
-name: Swift
+name: iOS Build and Test
 
 on:
   push:
@@ -16,7 +13,13 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+    - name: Set up Xcode
+      uses: maxim-lobanov/setup-xcode@v1
+      with:
+        xcode-version: '14.0' # Specify the Xcode version you need
+    - name: Install dependencies
+      run: swift package resolve
     - name: Build
-      run: swift build -v
+      run: xcodebuild -scheme iOS_SideMenu_Example -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 13,OS=15.0' build
     - name: Run tests
-      run: swift test -v
+      run: xcodebuild test -scheme iOS_SideMenu_Example -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 13,OS=15.0'
