--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -10,18 +10,20 @@ jobs:
   build:
 
     runs-on: macos-latest
-
+    env:
+      XCODE_VERSION: 15.4.0
+      IOS_VERSION: 17.5
     steps:
     - uses: actions/checkout@v4
     - name: Set up Xcode
       uses: maxim-lobanov/setup-xcode@v1
       with:
-        xcode-version: '15.4.1' # Specify the Xcode version you need
+        xcode-version: '${{ XCODE_VERSION }}' # Specify the Xcode version you need
     - name: Install dependencies
       run: swift package resolve
     - name: Build
-      run: xcodebuild -scheme SideMenuExample -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 13,OS=17.5' build -allowProvisioningUpdates
+      run: xcodebuild -scheme SideMenuExample -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 13,OS=${{IOS_VERSION}}' build -allowProvisioningUpdates
     - name: Run tests
-      run: xcodebuild test -scheme SideMenuExampleTests -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 13,OS=17.5' -allowProvisioningUpdates
+      run: xcodebuild test -scheme SideMenuExampleTests -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 13,OS=${{IOS_VERSION}}' -allowProvisioningUpdates
     - name: Run UI Tests
-      run: xcodebuild test -scheme SideMenuExampleUITests -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 13,OS=17.5' -allowProvisioningUpdates
+      run: xcodebuild test -scheme SideMenuExampleUITests -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 13,OS=${{IOS_VERSION}}' -allowProvisioningUpdates
