--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -18,12 +18,12 @@ jobs:
     - name: Set up Xcode
       uses: maxim-lobanov/setup-xcode@v1
       with:
-        xcode-version: '${{ XCODE_VERSION }}' # Specify the Xcode version you need
+        xcode-version: '${{ env.XCODE_VERSION }}' # Specify the Xcode version you need
     - name: Install dependencies
       run: swift package resolve
     - name: Build
-      run: xcodebuild -scheme SideMenuExample -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 13,OS=${{IOS_VERSION}}' build -allowProvisioningUpdates
+      run: xcodebuild -scheme SideMenuExample -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 13,OS=${{env.IOS_VERSION}}' build -allowProvisioningUpdates
     - name: Run tests
-      run: xcodebuild test -scheme SideMenuExampleTests -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 13,OS=${{IOS_VERSION}}' -allowProvisioningUpdates
+      run: xcodebuild test -scheme SideMenuExampleTests -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 13,OS=${{env.IOS_VERSION}}' -allowProvisioningUpdates
     - name: Run UI Tests
-      run: xcodebuild test -scheme SideMenuExampleUITests -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 13,OS=${{IOS_VERSION}}' -allowProvisioningUpdates
+      run: xcodebuild test -scheme SideMenuExampleUITests -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 13,OS=${{env.IOS_VERSION}}' -allowProvisioningUpdates
