--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -20,8 +20,8 @@ jobs:
       uses: maxim-lobanov/setup-xcode@v1
       with:
         xcode-version: '${{ env.XCODE_VERSION }}' # Specify the Xcode version you need
-    - name: Install dependencies
-      run: swift package resolve
+    # - name: Install dependencies
+    #   run: swift package resolve
     - name: Build
       run: xcodebuild -scheme SideMenuExample -sdk iphonesimulator -destination 'platform=iOS Simulator,name=${{env.PHONE_NAME}},OS=${{env.IOS_VERSION}}' build -allowProvisioningUpdates
     - name: Run tests
